# ddsplayground

./: .bazelrc  BUILD.bazel  MODULE.bazel  baz.cpp  hoge.cpp  inspector.cpp
bazel/: cyclonedds_repo.bzl
bazel-bin/: baz-0.params  baz.cppmap  hoge.runfiles_manifest  pong
bazel-bin/_objs/baz/: baz.d
bazel-bin/_objs/pong/: pong.d
bazel-bin/baz.runfiles/: MANIFEST
bazel-bin/baz.runfiles/_main/: baz
bazel-bin/ping.runfiles/: MANIFEST
bazel-dds/: inspector.cpp  ping.cpp  ping_pong.idl  pong.cpp
bazel-dds/bazel/: BUILD.bazel
bazel-dds/bazel-out/: stable-status.txt  volatile-status.txt
