load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_import", "cc_library")

##############################################################################
# IDL → C type-support (runs idlc at build time)
##############################################################################
genrule(
    name = "gen_ping_pong_types",
    srcs = ["ping_pong.idl"],
    outs = [
        "ping_pong.h",
        "ping_pong.c",
    ],
    # idlc -l c  →  generate C code
    # -o $(@D)   →  place outputs in Bazel's genfiles dir for this rule
    cmd = "$(execpath @cyclonedds//:idlc) -l c -o $(@D) $(location :ping_pong.idl)",
    tools = ["@cyclonedds//:idlc"],
)

# Library wrapping the generated type descriptors
cc_library(
    name = "ping_pong_types",
    srcs = ["ping_pong.c"],
    hdrs = ["ping_pong.h"],
    deps = ["@cyclonedds//:ddsc"],
)

##############################################################################
# ping  – publishes an incrementing integer every second
##############################################################################
cc_binary(
    name = "ping",
    srcs = ["ping.cpp"],
    deps = [":ping_pong_types"],
)

##############################################################################
# pong  – subscribes and prints each received value
##############################################################################
cc_binary(
    name = "pong",
    srcs = ["pong.cpp"],
    deps = [":ping_pong_types"],
)

##############################################################################
# baz  – receives forwarded values from pong, replies with "baz:<value>"
##############################################################################
cc_binary(
    name = "baz",
    srcs = ["baz.cpp"],
    deps = [":ping_pong_types"],
)

##############################################################################
# hoge  – subscribes to PingPongTopic and prints every integer from ping
##############################################################################
cc_binary(
    name = "hoge",
    srcs = ["hoge.cpp"],
    deps = [":ping_pong_types"],
)

##############################################################################
# inspector  – spies on RTPS discovery via DDS built-in topics
##############################################################################
cc_binary(
    name = "inspector",
    srcs = ["inspector.cpp"],
    deps = [
        "@cyclonedds//:ddsc",
        ":ping_pong_types",
    ],
)
